--- a/gui/environment.d/envvars.conf
+++ b/gui/environment.d/envvars.conf
@@ -1,13 +1,26 @@
 LANG="pt_PT.UTF-8"
 LC_MESSAGES="en_US.UTF-8"
 
+PATH="$PATH:$DOTFILES/scripts/path:$HOME/.cargo/bin"
+
 XDG_CONFIG_HOME="$HOME/.config"
 XDG_CACHE_HOME="$HOME/.cache"
 XDG_DATA_HOME="$HOME/.local/share"
 XDG_STATE_HOME="$HOME/.local/state"
 DOTFILES="$XDG_CONFIG_HOME/dotfiles"
 
+XDG_DESKTOP_DIR="$HOME/desktop"
+XDG_DOWNLOAD_DIR="$HOME/downloads"
+XDG_TEMPLATES_DIR="$HOME/templates"
+XDG_PUBLICSHARE_DIR="$HOME/public"
+XDG_DOCUMENTS_DIR="$HOME/documents"
+XDG_MUSIC_DIR="$HOME/documents/music"
+XDG_PICTURES_DIR="$HOME/documents/pictures"
+XDG_VIDEOS_DIR="$HOME/documents/videos"
+
 MOZ_ENABLE_WAYLAND=1
 QT_QPA_PLATFORM="wayland"
 SDL_VIDEODRIVEVER=wayland
 QT_WAYLAND_DISABLE_WINDOWDECORATION=1
+_JAVA_OPTIONS='-Dawt.useSystemAAFontSettings=gasp -Dswing.aatext=true'
+
