--- a/gui/environment.d/envvars.conf
+++ b/gui/environment.d/envvars.conf
@@ -1,5 +1,5 @@
-LANG="pt_PT.UTF-8"
-LC_MESSAGES="en_US.UTF-8"
+LANG='pt_PT.UTF-8'
+LC_MESSAGES='en_US.UTF-8'
 
 PATH="$PATH:$DOTFILES/scripts/path:$HOME/.cargo/bin"
 
@@ -19,8 +19,7 @@ XDG_PICTURES_DIR="$HOME/documents/pictures"
 XDG_VIDEOS_DIR="$HOME/documents/videos"
 
 MOZ_ENABLE_WAYLAND=1
-QT_QPA_PLATFORM="wayland"
-SDL_VIDEODRIVEVER=wayland
+QT_QPA_PLATFORM='wayland'
+SDL_VIDEODRIVEVER='wayland'
 QT_WAYLAND_DISABLE_WINDOWDECORATION=1
 _JAVA_OPTIONS='-Dawt.useSystemAAFontSettings=gasp -Dswing.aatext=true'
-
