--- a/tui/mpd/mpd.conf
+++ b/tui/mpd/mpd.conf
@@ -6,15 +6,19 @@ pid_file			"~/.config/mpd/pid"
 state_file			"~/.config/mpd/state"
 sticker_file		"~/.config/mpd/sticker.sql"
 
+
 audio_output {
 	type	"pipewire"
 	name	"PipeWire Sound Server"
 }
 
 audio_output {
-	type	"fifo"
-	name	"mpd_fifo"
-	path	"/tmp/mpd.fifo"
-	format	"44100:16:2"
+	type		"fifo"
+	name		"mpd_fifo"
+	path		"/tmp/mpd.fifo"
+	format		"44100:16:2"
+	buffer_time	"75000"
 }
 
+
+volume_normalization "yes"
