Moved things around, formatted some others and changed color themes

--- a/gui/kitty/kitty.conf
+++ b/gui/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # Look {{{
-font_family			InputMonoCondensed
-bold_font			InputMonoCondensed Bold
-italic_font			InputMonoCondensed Italic
+font_family		InputMonoCondensed
+bold_font		InputMonoCondensed Bold
+italic_font		InputMonoCondensed Italic
 bold_italic_font	InputMonoCondensed BoldIta
 
 
@@ -9,7 +9,7 @@ font_size 14
 disable_ligatures cursor
 force_ltr yes
 
-background_opacity 0.6
+background_opacity 0.9
 hide_window_decorations yes
 
 window_margin_width 0
@@ -17,7 +17,7 @@ window_border_width 1px
 draw_minimal_borders yes
 
 # BEGIN_KITTY_THEME
-# Ayu
+# Sakura Night
 include current-theme.conf
 # END_KITTY_THEME
 # }}}
