--- a/config/starship.toml
+++ b/config/starship.toml
@@ -33,7 +33,7 @@ disabled = false
 truncation_length = 0
 truncate_to_repo = false
 fish_style_pwd_dir_length = 2
-read_only = " "
+read_only = " "
 read_only_style = "red"
 style = "bold green"
 format = "[$path]($style)[$read_only]($read_only_style) "
