--- a/config/kitty/current-theme.conf
+++ b/config/kitty/current-theme.conf
@@ -1,45 +1,21 @@
-# vim:ft=kitty
-
-## name: Sakura Night
-## license: MIT
-## author: PandaCatPlayz
-## upstream: https://pandacatplayz.github.io/kitty-themes/Sakura_Night.conf
-## blurb: A custom kitty dark theme loosely using the Endesga 32 palette
-
-background            #181425
-foreground            #F06292
-cursor                #F06292
-selection_background  #F06292
-
-#: black
-color0 #181425
-color8 #262b44
-
-#: red
-color1 #e43b44
-color9 #ff0044
-
-#: green
-color2  #3e8948
-color10 #63c74d
-
-#: yellow
-color3  #feae34
-color11 #fee761
-
-#: blue
-color4  #124e89
-color12 #0099db
-
-#: magenta
-color5  #b55088
-color13 #F06292
-
-#: cyan
-color6  #008080
-color14 #66b2b2
-
-#: white
-color7  #c0cbdc
+background #0e1419
+foreground #e5e1cf
+cursor #f19618
+selection_background #243340
+color0 #000000
+color8 #323232
+color1 #ff3333
+color9 #ff6565
+color2 #b8cc52
+color10 #e9fe83
+color3 #e6c446
+color11 #fff778
+color4 #36a3d9
+color12 #68d4ff
+color5 #f07078
+color13 #ffa3aa
+color6 #95e5cb
+color14 #c7fffc
+color7 #ffffff
 color15 #ffffff
-selection_foreground #f7f7f7
+selection_foreground #0e1419
