--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,23 +1,23 @@
 # Look {{{
-font_family		InputMonoCondensed
-bold_font		InputMonoCondensed Bold
-italic_font		InputMonoCondensed Italic
-bold_italic_font	InputMonoCondensed BoldIta
+font_family      family='Iosevka Term' postscript_name=Iosevka-Term-Extended
+bold_font        family='Iosevka Term' postscript_name=Iosevka-Term-Bold-Extended
+italic_font      family='Iosevka Term' postscript_name=Iosevka-Term-Extended-Italic
+bold_italic_font family='Iosevka Term' postscript_name=Iosevka-Term-Bold-Extended-Italic
 
 
 font_size 14
 disable_ligatures cursor
 force_ltr yes
 
-background_opacity 0.9
-hide_window_decorations yes
+background_opacity 0.8
+hide_window_decorations no
 
 window_margin_width 0
 window_border_width 1px
 draw_minimal_borders yes
 
 # BEGIN_KITTY_THEME
-# Sakura Night
+# Ayu
 include current-theme.conf
 # END_KITTY_THEME
 # }}}
