--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -20,6 +20,7 @@ draw_minimal_borders yes
 # Ayu
 include current-theme.conf
 # END_KITTY_THEME
+#include embark-theme.conf
 # }}}
 # Configuration {{{
 enabled_layouts tall:bias=60,all
